# rain-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.matplotlib-cache/: fontlist-v390.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/raw/: kathmandu_dhm.xlsx
scripts/: verify.sh
src/rainfall_prediction/: __init__.py  cli.py  config.py  data.py  eda.py  modeling.py  pipeline.py  runtime.py
tests/: test_modeling_no_leakage_and_timesplit.py  test_preprocessing_features.py
