[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainfall-prediction-gbm"
version = "0.1.0"
description = "Rainfall prediction workflow for Kathmandu weather data using XGBoost, LightGBM, and CatBoost."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2",
  "cmeel-libomp>=21.1.8; platform_system == 'Darwin'",
  "joblib>=1.3",
  "lightgbm>=4.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
  "xgboost>=2.0",
]

[project.scripts]
rainfall-predictor = "rainfall_prediction.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
